<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/imageView7"
            android:layout_below="@+id/textView12"
            android:layout_marginTop="58dp"
            android:contentDescription="@string/username"
            android:text="@string/textview"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Username:"
            android:layout_alignStart="@+id/imageView7" />

    <TextView
        android:id="@+id/textViewPassw"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editUsername"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/editUsername"
        android:layout_toStartOf="@+id/editUsername"
        android:contentDescription="@string/Cognome"
        android:text="@string/password"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Password:" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/LOGIN"
        android:text="@string/textview"
        android:textColor="@android:color/holo_green_light"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        tools:text="LOGIN" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView12"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/image7"
        app:srcCompat="@drawable/login" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/textViewUsername"
        android:layout_toEndOf="@+id/textViewUsername"
        android:layout_toRightOf="@+id/textViewUsername"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editPassw"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textViewPassw"
        android:layout_toRightOf="@+id/textViewPassw"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editPassw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:contentDescription="@string/Button"
        android:text="@string/button"
        tools:text="->" />


</RelativeLayout>

