<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giada.app_colonnine.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="ExtraText,MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageView2"
            android:layout_marginTop="37dp"
            android:contentDescription="@string/localizzazione"
            app:srcCompat="@drawable/localizzazione" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="19dp"
            android:contentDescription="@string/ricarica"
            app:srcCompat="@drawable/ricarica"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/supporto1"
            app:srcCompat="@drawable/supporto1" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_above="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:text="@string/dove_vuoi_ricaricare"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView2"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:shadowColor="@android:color/holo_green_dark"
            android:text="@string/tipo_di_ricarica"
            android:textColor="@android:color/holo_green_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorHint="@android:color/holo_green_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_alignTop="@+id/imageView3"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            android:text="@string/supporto"
            android:textColor="@android:color/holo_green_dark"
            android:textColorHint="@android:color/holo_green_dark"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:buttonTint="@android:color/holo_green_dark"
            android:text="@string/standard"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/radioButton2"
            android:layout_alignBottom="@+id/radioButton2"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_toEndOf="@+id/radioButton2"
            android:layout_toRightOf="@+id/radioButton2"
            android:buttonTint="@android:color/holo_green_dark"
            android:text="@string/veloce"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            tools:text="Veloce" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:layout_alignTop="@+id/textView3"
            android:layout_toEndOf="@+id/button"
            android:layout_toRightOf="@+id/button"
            android:background="@android:color/darker_gray"
            android:cacheColorHint="@android:color/darker_gray" />

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_alignLeft="@+id/listView"
            android:layout_alignStart="@+id/listView"
            android:layout_alignTop="@+id/textView"
            android:text="@string/multiautocompletetextview" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/imageView6"
            android:layout_toEndOf="@+id/imageView6"
            android:layout_toRightOf="@+id/imageView6"
            android:text="@string/textview"
            android:textColor="@android:color/holo_green_dark"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="Vuoi aggiungere una nuova colonnina?" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_below="@+id/imageView3"
            android:layout_marginTop="19dp"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:background="?attr/colorButtonNormal"
            android:contentDescription="@string/button1"
            android:elevation="0dp"
            android:text="@string/button"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            tools:text="GO" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/button"
            android:layout_toEndOf="@+id/button"
            android:layout_toRightOf="@+id/button"
            android:contentDescription="@string/lampo"
            app:srcCompat="@drawable/lampo" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_alignEnd="@+id/imageView3"
            android:layout_alignRight="@+id/imageView3"
            android:layout_below="@+id/imageView5"
            android:contentDescription="@string/lampadina"
            app:srcCompat="@drawable/lampadina" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView5"
            android:text="@string/textview"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Colonnine Elettriche" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:backgroundTint="@android:color/background_light"
            android:contentDescription="@string/Button"
            android:tint="@android:color/holo_green_light"
            app:srcCompat="@android:drawable/ic_menu_send" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
